uneven sidebar bug removed

--- a/MStyle.css
+++ b/MStyle.css
@@ -67,7 +67,7 @@ a:hover {
     background-color: var(--color-prussian-blue);
     color: var(--color-misty-rose);
     font-size: 24px;
-    flex-basis: 20%;
+    /* flex-basis: 20%; */
 }
 .side-item {
     background-color: var(--color-oxford-blue);
